--- a/src/table/table.pcss
+++ b/src/table/table.pcss
@@ -4,8 +4,9 @@ table {
   >thead{
     >tr{
       >th {
-        padding: 10px 0;
+        padding: 10px 30px;
         border-bottom: 2px solid lightblue;
+        text-align: left;
       }
     }
   }
