- выделен компонент transactions - readme - чистка package.json
Signed-off-by: Nadia M <leavingofnight@gmail.com>

--- a/src/filter/filter.pcss
+++ b/src/filter/filter.pcss
@@ -1,6 +1,7 @@
 .search {
   float: right;
   padding: 20px 30px;
+  margin-right: 30px;
 
   >span {
     padding: 20px 30px;
@@ -10,5 +11,6 @@
     border: 1px solid lightblue;
     border-radius: 5px;
     padding: 5px 10px;
+    width: 169px;
   }
 }
